新协程压力测试数据

--- a/source/post/2018/1806.md
+++ b/source/post/2018/1806.md
@@ -64,21 +64,21 @@ v2版本在这方面就有了一些优化。基本思路是每个协程执行的
 
 ## 压力测试对比
 
-| 组件(Avg)                   | 协程数：1 切换开销 | 协程数：1000 创建开销 | 协程数：1000 切换开销 | 协程数：30000 创建开销 | 协程数：30000 切换开销 |
-|-----------------------------|--------------------|-----------------------|-----------------------|------------------------|------------------------|
-| 栈大小（如果可指定）        | 16 KB              | 2 MB                  | 2 MB                  | 64 KB                  | 64 KB                  |
-| libcopp                     | 60 ns              | 3.7 us                |  91 ns                | 3.5 us                 |  239 ns                |
-| libcopp+动态栈池            | 60 ns              | 109 ns                |  90 ns                | 261 ns                 |  238 ns                |
-| libcopp+libcotask           | 79 ns              | 4.2 us                |  124 ns               | 3.8 us                 |  338 ns                |
-| libcopp+libcotask+动态栈池  | 80 ns              | 246 ns                |  126 ns               | 340 ns                 |  335 ns                |
-| [libco][6]+静态栈池         | 94 ns              | 7.1 us                |  180 ns               | 5.7 us                 |  451 ns                |
-| [libco][6]（共享栈4K占用）  | 94 ns              | 3.8 us                |  173 ns               | 4.0 us                 |  558 ns                |
-| [libco][6]（共享栈8K占用）  | 95 ns              | 3.8 us                | 1021 ns               | 3.8 us                 | 1810 ns                |
-| [libco][6]（共享栈32K占用） | \-                 | 3.8 us                | 6275 ns               | 4.0 us                 | 6429 ns                |
-| [libgo][5] with boost       | 197 ns             | 5.3 us                |  124 ns               | 2.3 us                 |  441 ns                |
-| [libgo][5] with ucontext    | 539 ns             | 7.0 us                |  482 ns               | 2.7 us                 |  921 ns                |
-| [goroutine(golang)][7]      | 464 ns             | 578 ns                |  538 ns               | 1.4 us                 |  799 ns                |
-| linux ucontext              | 356 ns             | 4.0 us                |  431 ns               | 4.5 us                 |  946 ns                |
+| 组件(Avg)                        | 协程数：1 切换开销 | 协程数：1000 创建开销 | 协程数：1000 切换开销 | 协程数：30000 创建开销 | 协程数：30000 切换开销 |
+|----------------------------------|--------------------|-----------------------|-----------------------|------------------------|------------------------|
+| 栈大小（如果可指定）             | 16 KB              | 2 MB                  | 2 MB                  | 64 KB                  | 64 KB                  |
+| [libcopp][3]                     | 60 ns              | 3.7 us                |  91 ns                | 3.5 us                 |  239 ns                |
+| [libcopp+动态栈池][3]            | 60 ns              | 109 ns                |  90 ns                | 261 ns                 |  238 ns                |
+| [libcopp+libcotask][3]           | 79 ns              | 4.2 us                |  124 ns               | 3.8 us                 |  338 ns                |
+| [libcopp+libcotask+动态栈池][3]  | 80 ns              | 246 ns                |  126 ns               | 340 ns                 |  335 ns                |
+| [libco][6]+静态栈池              | 94 ns              | 7.1 us                |  180 ns               | 5.7 us                 |  451 ns                |
+| [libco][6]（共享栈4K占用）       | 94 ns              | 3.8 us                |  173 ns               | 4.0 us                 |  558 ns                |
+| [libco][6]（共享栈8K占用）       | 95 ns              | 3.8 us                | 1021 ns               | 3.8 us                 | 1810 ns                |
+| [libco][6]（共享栈32K占用）      | \-                 | 3.8 us                | 6275 ns               | 4.0 us                 | 6429 ns                |
+| [libgo][5] with boost            | 197 ns             | 5.3 us                |  124 ns               | 2.3 us                 |  441 ns                |
+| [libgo][5] with ucontext         | 539 ns             | 7.0 us                |  482 ns               | 2.7 us                 |  921 ns                |
+| [goroutine(golang)][7]           | 464 ns             | 578 ns                |  538 ns               | 1.4 us                 |  799 ns                |
+| linux ucontext                   | 356 ns             | 4.0 us                |  431 ns               | 4.5 us                 |  946 ns                |
 
 libcopp+libcotask比单纯的libcopp多了进程内唯一ID的分配、状态转换和维护、可调用对象和跳转函数直接的转换和事件响应，并且保证了线程安全。工程上一般会用libcotask，但是功能上libcopp才是和其他对比项类似的部分。在压力测试中，也没有包含[libco][6]和[libgo][5]里系统函数hook的部分。
 
