--- a/source/post/2019/1904.md
+++ b/source/post/2019/1904.md
@@ -45,6 +45,12 @@ C++20 整个协程体系是 **"无栈协程"** 的思路，整个功能是需要
 
 我目前看的提案以 [N4736][3] 为准（还有个使用文档是 [p0973r0][2] ）。一旦一个函数被断定为协程函数，那么它会被扩充为如下形式:
 
+> 2019-09-29: 更新文档
+> https://en.cppreference.com/w/cpp/language/coroutines
+> 这个 [N4775][7] 比 [N4736][3] 完整得多 : http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/n4775.pdf
+> 后面会整合进 [P0912R5][5]: http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2019/p0912r5.html
+> 目前还没有太大的变化。
+
 ```cpp
 COROUTINE_OBJECT func(args...) {
     try {
@@ -855,3 +861,6 @@ int main() {
 [2]: http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/p0973r0.pdf
 [3]: http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/n4736.pdf
 [4]: https://github.com/ultramanhu
+[5]: http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2019/p0912r5.html
+[6]: https://en.cppreference.com/w/cpp/language/coroutines
+[7]: http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/n4775.pdf
