修订1910的一处语法兼容性问题

--- a/source/post/2019/1910.md
+++ b/source/post/2019/1910.md
@@ -65,7 +65,7 @@ with:
   draft: true
 ```
 
-```use``` 的是对应github仓库的 **owner/repo** 名字然后 **@分支** 。 环境变量可以通过 **env** 传入，插件参数通过 **with** 传入。不过按开发文档看，参数只能是字符串类型。
+这里的 ```use``` 的是对应github仓库的 **owner/repo** 名字然后 **@分支** 。 环境变量可以通过 **env** 传入，插件参数通过 **with** 传入。不过按开发文档看，参数只能是字符串类型。
 
 ### Action 开发
 
