--- a/source/post/2019/1911.md
+++ b/source/post/2019/1911.md
@@ -559,13 +559,30 @@ C++20 裸测试的性能真是非常夸张地高，基本上性能已经赶上 [
             id: 'y-axis-2',
             gridLines: {
                 drawOnChartArea: false
+            },
+            ticks: {
+                callback: function(value, index, values) {
+                    return value + ' ns';
+                }
             }
-        },{
+        }, {
             type: 'logarithmic',
             display: true,
             scaleLabel: {
                 display: true,
                 labelString: "创建耗时（单位：纳秒）"
+            },
+            ticks: {
+                autoSkip: true,
+                callback: function(value, index, values) {
+                    for (var idx in values) {
+                        var tv = values[idx];
+                        if (tv < value && Math.floor(Math.log(value)) == Math.floor(Math.log(tv))) {
+                            return null;
+                        }
+                    }
+                    return value + ' ns';
+                }
             },
             position: 'right',
             id: 'y-axis-1',
@@ -575,7 +592,7 @@ C++20 裸测试的性能真是非常夸张地高，基本上性能已经赶上 [
 }
 {{< /chart >}}
 
-结论就不多说了，和 [《协程框架(libcopp)v2优化、自适应栈池和同类库的Benchmark对比》][6] 差不多，需要稍微提一下的是上面的测试条目里并不全在一个层面，有些是比较底层的接口，有的是已经接近工程化了。还有上面的测试结果受代码缓存命中率和数据缓存命中率影响比较大，除了 C++20 Coroutine 的测试以外，其他的都使用了一定的手段来让cache miss（更接近实际应用）。所以实际使用 C++20 Coroutine 的话切换性能应该是会比这个结果看起来差一些。不过参考 boost.context 的裸调用fcontext的上下文切换，cache不miss的时候大约是30ns左右，相比起来 C++20 Coroutine 还是很有优势的，而且 C++20 Coroutine 更大的优势在于创建性能和内存占用。
+结论就不多说了，和 [《协程框架(libcopp)v2优化、自适应栈池和同类库的Benchmark对比》][6] 差不多，需要稍微提一下的是上面的 **创建耗时** 的时间不是线性而是对数的，因为几个库差距有点大，等差的图示太难区分了；另外测试条目里并不全在一个层面，有些是比较底层的接口，有的是已经接近工程化了。还有上面的测试结果受代码缓存命中率和数据缓存命中率影响比较大，除了 C++20 Coroutine 的测试以外，其他的都使用了一定的手段来让cache miss（更接近实际应用）。所以实际使用 C++20 Coroutine 的话切换性能应该是会比这个结果看起来差一些。不过参考 boost.context 的裸调用fcontext的上下文切换，cache不miss的时候大约是30ns左右，相比起来 C++20 Coroutine 还是很有优势的，而且 C++20 Coroutine 更大的优势在于创建性能和内存占用。
 
 最后
 ------------------------------------------------
