--- a/source/post/2019/1911.md
+++ b/source/post/2019/1911.md
@@ -464,6 +464,13 @@ C++20 裸测试的性能真是非常夸张地高，基本上性能已经赶上 [
       "data": [529, 482, 921],
       "type": 'line'
     }, {
+      "label": "goroutine(golang) 切换耗时",
+      "borderColor": "rgba(255, 20, 147, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [425, 710, 1047],
+      "type": 'line'
+    }, {
       "label": "linux ucontext 切换耗时",
       "borderColor": "rgba(72, 61, 139, 1)",
       "fill": false,
