--- a/source/post/2018/1804.md
+++ b/source/post/2018/1804.md
@@ -205,7 +205,7 @@ match msg {
 和很多其他函数式语言一样，[Rust][1]使用最后一个值作为语句块的“返回值”。如果语句块是一个函数，那么就是函数返回值。比如：
 
 ```rust
-fn print_usage() {
+fn print_usage() -> i32 {
     123
 }
 ```
