fix stackless coroutine

--- a/source/post/2019/1911.md
+++ b/source/post/2019/1911.md
@@ -30,9 +30,7 @@ type: post
 
 之前写了 [《协程框架(libcopp)v2优化、自适应栈池和同类库的Benchmark对比》][6] 和 [《C++20 Coroutine》][5] ，但是一直没写 [C++20 Coroutine][7] 的测试报告。
 
-现在的草案版本比我当时写 [《C++20 Coroutine》][5] 的时候有了一点点更新，[cppreference][9] 上有文档了(https://en.cppreference.com/w/cpp/language/coroutines) 。里面列举的标准文档是[P0912R5][5]，这个文档目前还没完工，详情可以看他的来源[N4775][10]。不过内容上暂时还没有太大的变化。
-
-本来呢，按我以前的理解，以为 [C++20 Coroutine][7] 是无栈式协程，那样的话就没啥好测得了。因为本身不带什么额外开销，并且开销可控。但是上次写 [《C++20 Coroutine》][5] 得时候发现它也是有栈协程，也是要切换上下文得。今天我就照着之前的方式来benchmark一波 [C++20 Coroutine][7] 吧。
+现在的草案版本比我当时写 [《C++20 Coroutine》][5] 的时候有了一点点更新，[cppreference][9] 上有文档了(https://en.cppreference.com/w/cpp/language/coroutines) 。里面列举的标准文档是[P0912R5][5]，这个文档目前还没完工，详情可以看他的来源[N4775][10]。不过内容上暂时还没有太大的变化，今天我就照着之前的方式来benchmark一波 [C++20 Coroutine][7] 吧。
 
 压力测试机环境
 ------------------------------------------------
