--- a/source/post/2019/1904.md
+++ b/source/post/2019/1904.md
@@ -855,7 +855,7 @@ int main() {
 
 [libcopp][1] 所有组件都是可拆卸和自定义的，所以剩下还有些细节就是接入哪些东西的哪些接口，如果拆卸掉某些组件之后怎么保证这些接入仍然可用和是否要支持 [libcopp][1] 内yield或是await其他C++协程对象。这些在后面结合一些实际应用再取舍吧。
 
-最后，如果上面有哪些理解不对的地方或者建议，欢迎有兴趣的小伙伴们一起来交流探讨哈。
+最后，贴一个更详细一点的C++20 Coroutine生成的汇编（ https://gist.github.com/owt5008137/aa7b093caddcea5a79f32d0ebf4efa88 ）。如果上面有哪些理解不对的地方或者建议，欢迎有兴趣的小伙伴们一起来交流探讨哈。
 
 [1]: https://github.com/owt5008137/libcopp
 [2]: http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/p0973r0.pdf
