--- a/source/post/2019/1912.md
+++ b/source/post/2019/1912.md
@@ -69,10 +69,250 @@ Document: https://libcopp.atframe.work/
 
 ![../2018/1806-02.dot.png](../2018/1806-02.dot.png)
 
-其中 [copp][18] 里还分为 **栈分配器** 、 **执行上下文管理** 和 **用户自定义数据** ， 其中 **栈分配器** 是可自定义的，只需要类似 ```std::allocator``` 实现几个接口即可，我们也提供了几个内置的分配器供直接使用，包括 *通过malloc分配* 、 *mmap/unmap(Windows下是VirtualAlloc/VirtualFree)* 、 *自定义指定内存地址的分配器* 、 *Linux下的动态增长栈分配器* 和 *栈池分配器* 。这里面 *栈池分配器*  还支持搭配底层使用上面其他的分配器。[cotask][19] 是可选的，如果业务有自己的任务系统也可以不用，并且可以通过编译选项完全关闭， 而在 [cotask][19] 里，*ID分配器* 也是可以自定义的。 这样所使用的业务可以根据自己的需要来选择、搭配或是自定义用自己项目里统一的管理系统。
+其中 [copp][18] 里还分为 **栈分配器** 、 **执行上下文管理** 和 **用户自定义数据** ， 其中 **栈分配器** 是可自定义的，只需要类似 ```std::allocator``` 实现几个接口即可，我们也提供了几个内置的分配器供直接使用，包括 *通过malloc分配* 、 *mmap/unmap(Windows下是VirtualAlloc/VirtualFree)* 、 *自定义指定内存地址的分配器* 、 *Linux下的动态增长栈分配器* 和 *动态栈池分配器* 。这里面 *栈池分配器*  还支持搭配底层使用上面其他的分配器。[cotask][19] 是可选的，如果业务有自己的任务系统也可以不用，并且可以通过编译选项完全关闭， 而在 [cotask][19] 里，*ID分配器* 也是可以自定义的。 这样所使用的业务可以根据自己的需要来选择、搭配或是自定义用自己项目里统一的管理系统。
+
+### 关于栈池分配器
+
+栈池分配器起源于我大规模使用 [libcopp][1] 的一个项目压力测试的时候，发现实际的CPU占用和预期相差比较大（当时预期 [libcopp][1] 的开销时1%左右，但是实际大约 10%）。 后来分析出来大部分的开销耗在了 **缺页中断** 上面。[libgo][15] 和 [boost.coroutine2][13] 也有这个问题，而 [libco][17] 分配的栈一般都是malloc出来的而且会复用不太会出现这种情况。 其实在 [libcopp][1] 里如果选择使用 *通过malloc分配* 或者 *自定义指定内存地址的分配器* 也不会有这个问题。但是我们希望项目中发现问题（特别是栈溢出）为第一优先级，所以通常我们都会选用 *mmap/unmap(Windows下是VirtualAlloc/VirtualFree)*  。这时候这个问题就凸显出来了，因为每次分配的时候都重新建立地址映射，那么物理页肯定就被释放了。 为了解决这个问题，我们就写了一个 *动态栈池分配器* 这个分配器基本不需要设置，然后接入也只需要简单地改两处调用地代码即可。而之所以时 **动态** 的是因为我们项目中一台机器上可能会搭建很多测试环境，这些环境往往都是低负载、版本不同且提供给很多不同的人用的，所以就想减少低负载服务的内存占用，并且尽可能多地利用好已有内存映射的逻辑地址。 所以最终 *动态栈池分配器* 提供的功能是:
+
++ 栈对象采用 FILO 的模式
++ 高负载会自动提高栈池容量，并且带有数量和地址空间大小上限
++ 低负载会自动减小容量，并且带有数量和地址空间大小下限
++ 可以控制每个tick的回收数量，防止长时间 Stop The World
+
+### v1 -> v2的架构变化
 
 性能对比
 ------------------------------------------------
+
+有栈协程比起无栈协程的一个劣势是有代码段和数据段的跳转，不利于编译器的分析和优化和系统缓存的命中，所以性能上肯定是比不上无栈协程（比如 [C++20 Coroutine][5] ）。但是有栈协程比无栈协程也有一个非常大的优势在于对API设计完全没有要求，框架开发者可以做到对上层业务完全透明。在有栈协程中 [libcopp][1] 不说性能最好，也算是第一梯队的了。之前我做过一个协程的性能对比，也包含了 [C++20 Coroutine][5] 的无栈协程。
+
+{{< chart >}}
+{
+  "type": "bar",
+  "data": {
+    labels: ['协程数:1,栈大小16KB', '协程数:1000,栈大小2MB', '协程数:30000,栈大小64KB'],
+    "datasets": [ {
+      "label": "C++20 Coroutine - Clang 切换耗时",
+      "borderColor": "rgba(139, 0, 0, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [5, 6, 9],
+      "type": 'line'
+    }, {
+      "label": "C++20 Coroutine - MSVC 切换耗时",
+      "borderColor": "rgba(0, 0, 139, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [10, 14, 28],
+      "type": 'line'
+    }, {
+      "label": "libcopp 切换耗时",
+      "borderColor": "rgba(0, 139, 139, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [34, 80, 223],
+      "type": 'line'
+    }, {
+      "label": "libcopp+动态栈池 切换耗时",
+      "borderColor": "rgba(184, 134, 11, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [32, 77, 213],
+      "type": 'line'
+    }, {
+      "label": "libcopp+libcotask 切换耗时",
+      "borderColor": "rgba(169, 169, 169, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [50, 141, 389],
+      "type": 'line'
+    }, {
+      "label": "libcopp+libcotask+动态栈池 切换耗时",
+      "borderColor": "rgba(189, 183, 107, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [49, 134, 371],
+      "type": 'line'
+    }, {
+      "label": "libco+静态栈池 切换耗时",
+      "borderColor": "rgba(139, 0, 139, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [84, 168, 450],
+      "type": 'line'
+    }, {
+      "label": "libco（共享栈4K占用） 切换耗时",
+      "borderColor": "rgba(85, 107, 47, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [83, 529, 1073],
+      "type": 'line'
+    }, {
+      "label": "libco（共享栈8K占用） 切换耗时",
+      "borderColor": "rgba(255, 140, 0, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [82, 828, 1596],
+      "type": 'line'
+    }, {
+      "label": "libgo 2019年9月master分支 切换耗时",
+      "borderColor": "rgba(153, 50, 204, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [53, 120, 237],
+      "type": 'line'
+    }, {
+      "label": "libgo 2018年版本 with boost 切换耗时",
+      "borderColor": "rgba(233, 150, 122, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [197, 124, 441],
+      "type": 'line'
+    }, {
+      "label": "libgo 2018年版本 with ucontext 切换耗时",
+      "borderColor": "rgba(143, 188, 143, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [529, 482, 921],
+      "type": 'line'
+    }, {
+      "label": "goroutine(golang) 切换耗时",
+      "borderColor": "rgba(255, 20, 147, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [425, 710, 1047],
+      "type": 'line'
+    }, {
+      "label": "linux ucontext 切换耗时",
+      "borderColor": "rgba(72, 61, 139, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [435, 509, 890],
+      "type": 'line'
+    }, {
+      "label": "C++20 Coroutine - Clang 创建耗时",
+      "backgroundColor": "rgba(255, 0, 0, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 130, 136]
+    }, {
+      "label": "C++20 Coroutine - MSVC 创建耗时",
+      "backgroundColor": "rgba(0, 0, 255, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 407, 369]
+    }, {
+      "label": "libcopp 创建耗时",
+      "backgroundColor": "rgba(0, 255, 255, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 4100, 3800]
+    }, {
+      "label": "libcopp+动态栈池 创建耗时",
+      "backgroundColor": "rgba(218, 165, 32, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 96, 212]
+    }, {
+      "label": "libcopp+libcotask 创建耗时",
+      "backgroundColor": "rgba(128, 128, 128, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 4100, 4200]
+    }, {
+      "label": "libcopp+libcotask+动态栈池 创建耗时",
+      "backgroundColor": "rgba(240, 230, 140, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 134, 256]
+    }, {
+      "label": "libco+静态栈池 创建耗时",
+      "backgroundColor": "rgba(255, 0, 255, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 3900, 4200]
+    }, {
+      "label": "libco（共享栈4K占用） 创建耗时",
+      "backgroundColor": "rgba(128, 128, 0, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 3900, 3900]
+    }, {
+      "label": "libco（共享栈8K占用） 创建耗时",
+      "backgroundColor": "rgba(255, 165, 0, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 4000, 3900]
+    }, {
+      "label": "libgo 2019年9月master分支 创建耗时",
+      "backgroundColor": "rgba(218, 112, 214, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 8300, 5500]
+    }, {
+      "label": "libgo 2018年版本 with boost 创建耗时",
+      "backgroundColor": "rgba(250, 128, 114, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 5300, 2300]
+    }, {
+      "label": "libgo 2018年版本 with ucontext 创建耗时",
+      "backgroundColor": "rgba(46, 139, 87, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 7000, 2700]
+    }, {
+      "label": "goroutine(golang) 创建耗时",
+      "backgroundColor": "rgba(106, 90, 205, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 1000, 1000]
+    }, {
+      "label": "linux ucontext 创建耗时",
+      "backgroundColor": "rgba(112, 128, 144, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 4400, 4800]
+    }]
+  },
+  "options": {
+      title: {
+        display: true,
+        text: '切换/创建耗时（越小越好）'
+    },
+      scales: {
+        yAxes: [{
+            type: 'linear',
+            display: true,
+            scaleLabel: {
+                display: true,
+                labelString: "切换耗时（单位：纳秒）"
+            },
+            position: 'left',
+            id: 'y-axis-2',
+            gridLines: {
+                drawOnChartArea: false
+            },
+            ticks: {
+                callback: function(value, index, values) {
+                    return value + ' ns';
+                }
+            }
+        }, {
+            type: 'logarithmic',
+            display: true,
+            scaleLabel: {
+                display: true,
+                labelString: "创建耗时（单位：纳秒）"
+            },
+            ticks: {
+                autoSkip: true,
+                callback: function(value, index, values) {
+                    for (var idx in values) {
+                        var tv = values[idx];
+                        if (tv < value && Math.floor(Math.log(value)) == Math.floor(Math.log(tv))) {
+                            return null;
+                        }
+                    }
+                    return value + ' ns';
+                }
+            },
+            position: 'right',
+            id: 'y-axis-1',
+        }],
+    }
+  }
+}
+{{< /chart >}}
+
+更细节的详情可以参见: [《C++20 Coroutine 性能测试 (附带和libcopp/libco/libgo/goroutine/linux ucontext对比)》][20] 和 [《协程框架(libcopp)v2优化、自适应栈池和同类库的Benchmark对比》][6]
 
 工具集成
 ------------------------------------------------
@@ -83,7 +323,7 @@ vcpkg
 未来的开发计划
 ------------------------------------------------
 
-C++20 Coroutine
+[C++20 Coroutine][5] 已经正式进入了草案，并且它在运行性能、内存占用、语法糖上都有绝对的优势。虽然说离能够正式使用还很遥远，但是底层的库的都需要先行。[libcopp][1] 的下一步计划是思考如何能够和 [C++20 Coroutine][5] 搭配起来，甚至后面如果往 [C++20 Coroutine][5] 上迁移能够平滑地进行。其实要实现让 [libcopp][1] 支持[C++20 Coroutine][5] 的 ```co_await``` 并不是很困难，稍微麻烦的地方在于如何判定编译器和环境是否支持。而另一个最大的困难在于像如何使用或者过渡到 [C++20 Coroutine][5] 的上下文模型。[C++20 Coroutine][5]的一大问题是接入非常麻烦且几个模块的关系非常不直观，如果哪天正式项目中可以使用了肯定是包了好几层的。那么对于 [libcopp][1] 来说就是以后对 [C++20 Coroutine][5] 如何封装和如果能够较容易地过渡过去。
 
 最后
 ------------------------------------------------
@@ -109,3 +349,4 @@ C++20 Coroutine
 [17]: https://github.com/Tencent/libco
 [18]: https://github.com/owt5008137/libcopp/tree/v2/include/libcopp
 [19]: https://github.com/owt5008137/libcopp/tree/v2/include/libcotask
+[20]: https://owent.net/2019/1911.html
