--- a/source/post/2019/1912.md
+++ b/source/post/2019/1912.md
@@ -50,7 +50,7 @@ Document: https://libcopp.atframe.work/
 
 + 跨平台（Linux/macOS/Windows/MinGW + GCC/Clang/MSVC）
 + 高性能
-+ 易集成
++ 易集成，不容易误用，线程安全
 + 功能简洁，正交性
 + 容易定制化
 + 依赖少
@@ -65,7 +65,7 @@ Document: https://libcopp.atframe.work/
 
 我没有挨个平台去看 ABI 的文档，所以为了实现跨平台，我在 [libcopp][1] 里是直接引用了 [boost.context][13] 里的 fcontext 部分。但是我把它的平台判定和汇编层代码剥离出来并且符号重命名了，这样可以不依赖庞大的 [boost][13] 库，而且如果哪个项目要用 [boost][13] 也不会冲突。项目里的 [BOOST_LICENSE_1_0.txt](https://github.com/owt5008137/libcopp/blob/v2/BOOST_LICENSE_1_0.txt) 也是这个原因而存在。
 
-[libcopp][1] 大体上分为两部分.第一部分是 [copp][18] ，这部分主要负责偏底层的协程上下文管理、栈管理； 第二部分是 [cotask][19] ， 这部分主要用于一些更高层面设计模式和基于协程的任务模型（包括但不限于进程内唯一ID分配、超时管理、await语义、自定义参数的关联和分配等等）。
+[libcopp][1] 大体上分为两部分.第一部分是 [copp][18] ，这部分主要负责偏底层的协程上下文管理、栈管理； 第二部分是 [cotask][19] ， 这部分主要用于一些更高层面设计模式和基于协程的任务模型（包括但不限于进程内唯一ID分配、超时管理、await语义、自定义参数的关联和分配等等），还包含一个 ```task_manager``` 用于基于ID的统一管理和提供超时管理。
 
 ![../2018/1806-02.dot.png](../2018/1806-02.dot.png)
 
@@ -81,6 +81,14 @@ Document: https://libcopp.atframe.work/
 + 可以控制每个tick的回收数量，防止长时间 Stop The World
 
 ### v1 -> v2的架构变化
+
+boost 对称 -> 非对称 ， ontop ， 数据透传
+
+内存碎片优化,自定义数据
+
+侵入式智能指针
+
+缓存命中率
 
 性能对比
 ------------------------------------------------
@@ -319,6 +327,7 @@ Document: https://libcopp.atframe.work/
 
 CMake Modern Module
 vcpkg
+单元测试和压力测试
 
 未来的开发计划
 ------------------------------------------------
